# TMflow-security-report-generator

./: .gitignore  CHANGELOG.md  CONFIG_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  POPUP_WINDOW_ROOT_CAUSE_ANALYSIS.md  PROJECT_SPECIFICATION.md  PROJECT_STRUCTURE.md  README.md  TMflow_Security_Report_Generator.spec  TMflow_Security_Report_Generator_v1.0.2.044.spec  TMflow_Security_Report_Generator_v1.0.2.045.spec  TMflow_Security_Report_Generator_v1.0.2.046.spec  TMflow_Security_Report_Generator_v1.0.2.047.spec  TMflow_Security_Report_Generator_v1.0.2.048.spec  TMflow_Security_Report_Generator_v1.0.2.049.spec  UI_Design_Document.md  UI_ISSUES_LOG.md  UI_SPECIFICATION.md  build_exe.py  build_modular.py  build_simple.bat  build_simple.py  build_v1.0.2.042_shareable.py  build_v1.0.2.043_auto_connect.py  build_v1.0.2.044_status_fix.py  build_v1.0.2.045_i18n_fix.py  build_v1.0.2.046_layout_fix.py  build_v1.0.2.047_weight_fix.py  build_v1.0.2.048_paned_fix.py  build_v1.0.2.049_slim.py  cleanup_old_versions.bat  cleanup_project.py  config.example.txt  generate_reports.py  requirements.txt  test_modules.py  tmflow_generator.spec  ui_modern.py  ui_modular.py  (+2 more)
.github/workflows/: ci.yml
.kiro/steering/: communication-preferences.md  development-principles.md  project-context.md  testing-guidelines.md  troubleshooting-guidelines.md  version-workflow.md
FS Doc/: infomation.txt  link.txt
FS Doc/05-reporting-and-compliance/: README.md
FS Doc/05-reporting-and-compliance/fs-report/: Dockerfile
FS Doc/05-reporting-and-compliance/report_license/: LICENSE  report_license.py  requirements.txt
TMflow_Security_Report_Generator_v1.0.2.003/: CHANGELOG.md  使用說明.txt
TMflow_Security_Report_Generator_v1.0.2.003/fs-report/: CUSTOMER_SETUP.md
TMflow_Security_Report_Generator_v1.0.2.003/fs-report/fs_report/: __init__.py
TMflow_Security_Report_Generator_v1.0.2.003/fs-report/recipes/: README.md
TMflow_Security_Report_Generator_v1.0.2.003/fs-reporter/: requirements.txt
TMflow_Security_Report_Generator_v1.0.2.042/: CHANGELOG.md  LICENSE  使用說明_v1.0.2.042_可分享版本.txt
TMflow_Security_Report_Generator_v1.0.2.042/fs-report/: CHANGELOG.md  LICENSE  REPORT_GUIDE.md  requirements_simple.txt
TMflow_Security_Report_Generator_v1.0.2.042/fs-report/fs_report/: cli.py  data_cache.py  report_engine.py
TMflow_Security_Report_Generator_v1.0.2.042/fs-report/recipes/: component_list.yaml  component_vulnerability_analysis.yaml  scan_analysis.yaml
TMflow_Security_Report_Generator_v1.0.2.042/fs-report/templates/: bar_chart.html  executive_summary.html  findings_by_project.html  line_chart.html  pie_chart.html
TMflow_Security_Report_Generator_v1.0.2.042/fs-reporter/: LICENSE  README.md  main.py
TMflow_Security_Report_Generator_v1.0.2.042/fs-reporter/schemas/: OpenAPI_Schema_07_15_2025.yaml
TMflow_Security_Report_Generator_v1.0.2.042/fs-reporter/tests/: test_cli.py
TMflow_Security_Report_Generator_v1.0.2.043/: CHANGELOG.md  README.md  使用說明_v1.0.2.043_自動連線優化版.txt
TMflow_Security_Report_Generator_v1.0.2.043/fs-report/fs_report/: data_transformer.py
TMflow_Security_Report_Generator_v1.0.2.043/fs-reporter/: MANIFEST.in
TMflow_Security_Report_Generator_v1.0.2.044/: CHANGELOG.md  ui_modular.py  使用說明_v1.0.2.044.txt
TMflow_Security_Report_Generator_v1.0.2.044/fs-report/: README.md  pyproject.toml
TMflow_Security_Report_Generator_v1.0.2.044/fs-report/fs_report/: period_parser.py
TMflow_Security_Report_Generator_v1.0.2.044/fs-report/recipes/: user_activity.yaml
TMflow_Security_Report_Generator_v1.0.2.045/: CHANGELOG.md  README.md  使用說明_v1.0.2.045.txt
TMflow_Security_Report_Generator_v1.0.2.045/fs-report/recipes/: findings_by_project.yaml
TMflow_Security_Report_Generator_v1.0.2.045/fs-report/templates/: scatter_chart.html
TMflow_Security_Report_Generator_v1.0.2.046/: CHANGELOG.md  使用說明_v1.0.2.046.txt
TMflow_Security_Report_Generator_v1.0.2.046/fs-report/templates/: base.html  table.html
TMflow_Security_Report_Generator_v1.0.2.046/fs-reporter/: pyproject.toml
TMflow_Security_Report_Generator_v1.0.2.046/fs-reporter/tests/: test_reporter.py
TMflow_Security_Report_Generator_v1.0.2.047/: CHANGELOG.md  使用說明_v1.0.2.047.txt
TMflow_Security_Report_Generator_v1.0.2.047/fs-report/templates/: user_activity.html
TMflow_Security_Report_Generator_v1.0.2.048/: CHANGELOG.md  config.example.txt  使用說明_v1.0.2.048.txt
TMflow_Security_Report_Generator_v1.0.2.048/fs-report/recipes/: executive_summary.yaml
TMflow_Security_Report_Generator_v1.0.2.048/fs-report/templates/: scan_analysis.html
TMflow_Security_Report_Generator_v1.0.2.048/fs-reporter/schemas/: README.md
TMflow_Security_Report_Generator_v1.0.2.048/fs-reporter/tests/: __init__.py
TMflow_Security_Report_Generator_v1.0.2.049/: USAGE_GUIDE.md  使用說明_v1.0.2.049.txt
TMflow_Security_Report_Generator_v1.0.2.049/fs-report/: docker-compose.yml
TMflow_Security_Report_Generator_v1.0.2.049/fs-report/fs_report/: recipe_loader.py
fs-report/fs_report/: api_client.py  models.py
fs-report/templates/: component_list.html
(+22 files in other folders)
